--- a/apps/frontend/web-app/src/app/global.css
+++ b/apps/frontend/web-app/src/app/global.css
@@ -11,20 +11,17 @@ html {
   tab-size: 4;
   scroll-behavior: smooth;
 }
-
 body {
   font-family: inherit;
   line-height: inherit;
   margin: 0;
 }
-
 h1,
 h2,
 p,
 pre {
   margin: 0;
 }
-
 *,
 ::before,
 ::after {
@@ -33,30 +30,25 @@ pre {
   border-style: solid;
   border-color: currentColor;
 }
-
 h1,
 h2 {
   font-size: inherit;
   font-weight: inherit;
 }
-
 a {
   color: inherit;
   text-decoration: inherit;
 }
-
 pre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New,
     monospace;
 }
-
 svg {
   display: block;
   vertical-align: middle;
   shape-rendering: auto;
   text-rendering: optimizeLegibility;
 }
-
 pre {
   background-color: rgba(55, 65, 81, 1);
   border-radius: 0.25rem;
@@ -71,15 +63,12 @@ pre {
   box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
-
 .rounded {
   border-radius: 1.5rem;
 }
-
 .wrapper {
   width: 100%;
 }
-
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -90,18 +79,15 @@ pre {
   color: rgba(55, 65, 81, 1);
   width: 100%;
 }
-
 #welcome {
   margin-top: 2.5rem;
 }
-
 #welcome h1 {
   font-size: 3rem;
   font-weight: 500;
   letter-spacing: -0.025em;
   line-height: 1;
 }
-
 #welcome span {
   display: block;
   font-size: 1.875rem;
@@ -109,7 +95,6 @@ pre {
   line-height: 2.25rem;
   margin-bottom: 0.5rem;
 }
-
 #hero {
   align-items: center;
   background-color: hsla(214, 62%, 21%, 1);
@@ -120,18 +105,15 @@ pre {
   grid-template-columns: 1fr;
   margin-top: 3.5rem;
 }
-
 #hero .text-container {
   color: rgba(255, 255, 255, 1);
   padding: 3rem 2rem;
 }
-
 #hero .text-container h2 {
   font-size: 1.5rem;
   line-height: 2rem;
   position: relative;
 }
-
 #hero .text-container h2 svg {
   color: hsla(162, 47%, 50%, 1);
   height: 2rem;
@@ -140,11 +122,9 @@ pre {
   top: 0;
   width: 2rem;
 }
-
 #hero .text-container h2 span {
   margin-left: 2.5rem;
 }
-
 #hero .text-container a {
   background-color: rgba(255, 255, 255, 1);
   border-radius: 0.75rem;
@@ -154,19 +134,16 @@ pre {
   padding: 1rem 2rem;
   text-decoration: inherit;
 }
-
 #hero .logo-container {
   display: none;
   justify-content: center;
   padding-left: 2rem;
   padding-right: 2rem;
 }
-
 #hero .logo-container svg {
   color: rgba(255, 255, 255, 1);
   width: 66.666667%;
 }
-
 #middle-content {
   align-items: flex-start;
   display: grid;
@@ -174,11 +151,9 @@ pre {
   grid-template-columns: 1fr;
   margin-top: 3.5rem;
 }
-
 #learning-materials {
   padding: 2.5rem 2rem;
 }
-
 #learning-materials h2 {
   font-weight: 500;
   font-size: 1.25rem;
@@ -187,7 +162,6 @@ pre {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
 .list-item-link {
   align-items: center;
   border-radius: 0.75rem;
@@ -200,7 +174,6 @@ pre {
   transition-duration: 150ms;
   width: 100%;
 }
-
 .list-item-link svg:first-child {
   margin-right: 1rem;
   height: 1.5rem;
@@ -210,8 +183,7 @@ pre {
   transition-duration: 150ms;
   width: 1.5rem;
 }
-
-.list-item-link>span {
+.list-item-link > span {
   flex-grow: 1;
   font-weight: 400;
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow,
@@ -219,8 +191,7 @@ pre {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-
-.list-item-link>span>span {
+.list-item-link > span > span {
   color: rgba(107, 114, 128, 1);
   display: block;
   flex-grow: 1;
@@ -232,7 +203,6 @@ pre {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-
 .list-item-link svg:last-child {
   height: 1rem;
   transition-property: all;
@@ -240,24 +210,20 @@ pre {
   transition-duration: 150ms;
   width: 1rem;
 }
-
 .list-item-link:hover {
   color: rgba(255, 255, 255, 1);
   background-color: hsla(162, 47%, 50%, 1);
 }
-
-.list-item-link:hover>span {}
-
-.list-item-link:hover>span>span {
+.list-item-link:hover > span {
+}
+.list-item-link:hover > span > span {
   color: rgba(243, 244, 246, 1);
 }
-
 .list-item-link:hover svg:last-child {
   transform: translateX(0.25rem);
 }
-
-#other-links {}
-
+#other-links {
+}
 .button-pill {
   padding: 1.5rem 2rem;
   transition-duration: 300ms;
@@ -267,7 +233,6 @@ pre {
   align-items: center;
   display: flex;
 }
-
 .button-pill svg {
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow,
     transform, filter, backdrop-filter, -webkit-backdrop-filter;
@@ -276,8 +241,7 @@ pre {
   flex-shrink: 0;
   width: 3rem;
 }
-
-.button-pill>span {
+.button-pill > span {
   letter-spacing: -0.025em;
   font-weight: 400;
   font-size: 1.125rem;
@@ -285,65 +249,52 @@ pre {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
 .button-pill span span {
   display: block;
   font-size: 0.875rem;
   font-weight: 300;
   line-height: 1.25rem;
 }
-
 .button-pill:hover svg,
 .button-pill:hover {
   color: rgba(255, 255, 255, 1) !important;
 }
-
 #nx-console:hover {
   background-color: rgba(0, 122, 204, 1);
 }
-
 #nx-console svg {
   color: rgba(0, 122, 204, 1);
 }
-
 #nx-console-jetbrains {
   margin-top: 2rem;
 }
-
 #nx-console-jetbrains:hover {
   background-color: rgba(255, 49, 140, 1);
 }
-
 #nx-console-jetbrains svg {
   color: rgba(255, 49, 140, 1);
 }
-
 #nx-repo:hover {
   background-color: rgba(24, 23, 23, 1);
 }
-
 #nx-repo svg {
   color: rgba(24, 23, 23, 1);
 }
-
 #nx-cloud {
   margin-bottom: 2rem;
   margin-top: 2rem;
   padding: 2.5rem 2rem;
 }
-
-#nx-cloud>div {
+#nx-cloud > div {
   align-items: center;
   display: flex;
 }
-
-#nx-cloud>div svg {
+#nx-cloud > div svg {
   border-radius: 0.375rem;
   flex-shrink: 0;
   width: 3rem;
 }
-
-#nx-cloud>div h2 {
+#nx-cloud > div h2 {
   font-size: 1.125rem;
   font-weight: 400;
   letter-spacing: -0.025em;
@@ -351,24 +302,20 @@ pre {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
-#nx-cloud>div h2 span {
+#nx-cloud > div h2 span {
   display: block;
   font-size: 0.875rem;
   font-weight: 300;
   line-height: 1.25rem;
 }
-
 #nx-cloud p {
   font-size: 1rem;
   line-height: 1.5rem;
   margin-top: 1rem;
 }
-
 #nx-cloud pre {
   margin-top: 1rem;
 }
-
 #nx-cloud a {
   color: rgba(107, 114, 128, 1);
   display: block;
@@ -377,16 +324,13 @@ pre {
   margin-top: 1.5rem;
   text-align: right;
 }
-
 #nx-cloud a:hover {
   text-decoration: underline;
 }
-
 #commands {
   padding: 2.5rem 2rem;
   margin-top: 3.5rem;
 }
-
 #commands h2 {
   font-size: 1.25rem;
   font-weight: 400;
@@ -395,7 +339,6 @@ pre {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
 #commands p {
   font-size: 1rem;
   font-weight: 300;
@@ -404,7 +347,6 @@ pre {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
 details {
   align-items: center;
   display: flex;
@@ -413,12 +355,10 @@ details {
   padding-right: 1rem;
   width: 100%;
 }
-
-details pre>span {
+details pre > span {
   color: rgba(181, 181, 181, 1);
   display: block;
 }
-
 summary {
   border-radius: 0.5rem;
   display: flex;
@@ -430,17 +370,14 @@ summary {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-
 summary:hover {
   background-color: rgba(243, 244, 246, 1);
 }
-
 summary svg {
   height: 1.5rem;
   margin-right: 1rem;
   width: 1.5rem;
 }
-
 #love {
   color: rgba(107, 114, 128, 1);
   font-size: 0.875rem;
@@ -449,7 +386,6 @@ summary svg {
   opacity: 0.6;
   text-align: center;
 }
-
 #love svg {
   color: rgba(252, 165, 165, 1);
   width: 1.25rem;
@@ -457,16 +393,13 @@ summary svg {
   display: inline;
   margin-top: -0.25rem;
 }
-
 @media screen and (min-width: 768px) {
   #hero {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-
   #hero .logo-container {
     display: flex;
   }
-
   #middle-content {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
